--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,7 +1,10 @@
 name: Scrape Open Platform API Announcement
 on:
+  push:
+    branches:
+      - master
   schedule:
-    - cron: "0/5 * * * *"
+    - cron: "0 * * * *"
 jobs:
   scrape:
     runs-on: ubuntu-latest
