chore: Update readme

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "**.js"
+      - "**.yml"
   schedule:
     - cron: "0 * * * *"
 jobs:
