--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -7,7 +7,7 @@ on:
       - "**.js"
       - "**.yml"
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 * * * *"
 jobs:
   scrape:
     runs-on: ubuntu-latest
