--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,6 +22,7 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
           DISCORD_CHANNEL_ID: ${{ secrets.DISCORD_CHANNEL_ID }}
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
       - uses: quangvo09/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
